Drag and drop moving for Tasks ans Steps

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -13,6 +13,7 @@
     "plus_tooltip": "Add a new tile of this type.",
     "zoomIn_tooltip": "Zoom In.",
     "zoomOut_tooltip": "Zoom Out.",
+    "resetRoom_tooltip": "Reset zoom to 100%",
     "settingsMenu_tooltip": "Open the settings menu (save, import, ...)",
     "enableHelp_label": "Enable the tooltips",
     "enableHelp_tooltip": "Description of each element of the RLG Maker.",
@@ -40,6 +41,10 @@
     "snackbar_loading_success": "File upload successful.",
     "snackbar_roleName": "Attention, this title is already used in this Mission",
     "snackbar_moveOptionnalTask": "Make sure to keep alternative tasks grouped in the same column",
+    "snackbar_moveFinalTask_moveBeforeTasks": "It is not possible to place an end-of-line task before other tasks",
+    "snackbar_moveFinalTask_inversion": "End-of-line tasks have been reversed",
+    "snackbar_moveFinalTask_taskPlacedAtEnd": "It is not possible to place an end-of-line task before other tasks, the task has been placed at the end of the line",
+    "snackbar_moveTask_movedBeforeEndlineTask": "It is not possible to place a task after an end-of-line task, the task has been placed before the end-of-line task",
     "snackbar_deleteOptionnalTask": "Attention, alternative tasks go in pairs at minimum, ensure that the user always has a choice between several of these tasks",
     "snackbar_unity_exportFailed": "Export failed, please ensure all exported fields are properly filled",
 
@@ -365,7 +370,7 @@
     "tutorial_phase_7_title": "7. In the order of your choice: highlight common tasks, identify prerequisites & estimate task duration:",
     "tutorial_phase_7": "- For each task done with another role, click on the top right of that task and choose the same symbol for tasks performed simultaneously\n- Identify the order of execution of tasks for the same role. Click on the 'prerequisites' button for the task and select the task(s) necessary to execute it\n- If an action is quick to perform, it will take 1 Time Unit (TU), setting a larger TU will increase the size of the task\nThis ensures that common tasks can be performed simultaneously and that scenarios have the same duration.",
     "tutorial_phase_8_title": "8. Order the tasks:",
-    "tutorial_phase_8": "If not done in the previous phase, move tasks based on prerequisites using the arrows that appear when hovering over a task. If a task is to be done after another, it should be placed in the column to its right. Tasks in the same column have no execution order. Those in the first column have no prerequisites and can be executed at the beginning of the game.",
+    "tutorial_phase_8": "If this wasn't done in the previous phase, move the tasks according to the prerequisites using the arrows that appear when hovering over a task or by holding Shift while dragging and dropping.\nIf a task needs to be done after another, it should be placed in the column to its right. Tasks in the same column have no specific order of execution. Those in the first column have no prerequisites and can be executed at the beginning of the game.",
     "tutorial_phase_9_title": "9. Add side tasks:",
     "tutorial_phase_9": "Quick and unnecessary tasks to achieve pedagogical objectives, they are used to occupy a role while another finishes their tasks to reach a common task together or even to achieve equivalent playtime between roles. A player can do all side tasks quickly or none at all; it should not be a blocking factor for the scenario.",
     "tutorial_optionnal_event": "Random Event",
