--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -13,6 +13,7 @@
     "plus_tooltip": "Ajouter une nouvelle tuilde de ce type.",
     "zoomIn_tooltip": "Zoomer.",
     "zoomOut_tooltip": "Dézoomer.",
+    "resetRoom_tooltip": "Réinitialiser le zoom à 100%",
     "settingsMenu_tooltip": "Ouvrir le menu des paramètres (sauvegarde, import, ...)",
     "enableHelp_label": "Activer les aides",
     "enableHelp_tooltip": "Descriptif de chaque élément du RLG Maker.",
@@ -40,6 +41,10 @@
     "snackbar_loading_success": "Chargement du fichier réussi",
     "snackbar_roleName": "Attention, cet intitulé est déjà utilisé dans cette Mission",
     "snackbar_moveOptionnalTask": "Veillez à garder les tâches alternatives groupées dans la même colonne",
+    "snackbar_moveFinalTask_moveBeforeTasks": "Impossible de mettre une tâche de fin de ligne devant d'autres tâches",
+    "snackbar_moveFinalTask_inversion": "Les tâches de fin de ligne ont été inversées",
+    "snackbar_moveFinalTask_taskPlacedAtEnd": "Impossible de mettre une tâche de fin de ligne devant d'autres tâches, la tâche a été placée en fin de ligne",
+    "snackbar_moveTask_movedBeforeEndlineTask": "Impossible de mettre une tâche après une tâche de fin de ligne, la tâche a été placée devant la tâche de fin de ligne",
     "snackbar_deleteOptionnalTask": "Attention, les tâches alternatives vont au minimum par deux, veillez à ce que l'utilisateur ait toujours le choix entre plusieurs de ces tâches",
     "snackbar_unity_exportFailed": "Export échoué, veillez à vérifier que tous les champs exportés soient bien remplis",
 
@@ -365,7 +370,7 @@
     "tutorial_phase_7_title": "7. Dans l'ordre de votre choix : mettre en évidence les tâches communes, identifier les prérequis & estimer la durée des tâches :",
     "tutorial_phase_7": "- Pour chaque tâche faite avec un autre rôle, cliquez sur la case en haut à droite de cette tâche et choisir le même symbole pour les tâches réalisées simultanément.\n- Identifiez l'ordre d'exécution des tâches d'un même rôle. Cliquer sur le bouton «prérequis» de la tâche et sélectionner la ou les tâches nécessaires pour exécuter celle-ci\n- Si une action est rapide à effectuer elle prendra 1 Unité de Temps (UT), mettre une UT plus grande allongera la taille de la tâche.\nCeci permet de vérifier que les tâches communes peuvent être effectuées simultanément et que les scénarios soient de durée identique.",
     "tutorial_phase_8_title": "8. Ordonner les tâches :",
-    "tutorial_phase_8": "Si cela n'a pas été effectué à la phase précédente, déplacez les tâches en fonction des prérequis grâce aux flèches qui apparaissent au survol d'une tâche. Si une tâche est à faire après une autre, elle doit être placée dans la colonne à sa droite. Les tâches d'une même colonne n'ont pas d'ordre d'exécution. Celles de la première colonne n'ont aucun prérequis et peuvent être exécutées dès le début du jeu.",
+    "tutorial_phase_8": "Si cela n'a pas été effectué à la phase précédente, déplacez les tâches en fonction des prérequis grâce aux flèches qui apparaissent au survol d'une tâche ou en maintenant Majuscule en faisant glisser-déposer.\nSi une tâche est à faire après une autre, elle doit être placée dans la colonne à sa droite. Les tâches d'une même colonne n'ont pas d'ordre d'exécution. Celles de la première colonne n'ont aucun prérequis et peuvent être exécutées dès le début du jeu.",
     "tutorial_phase_9_title": "9. Ajouter des tâches annexes.",
     "tutorial_phase_9": "Tâches rapides et non nécessaires pour atteindre les objectifs pédagogiques, elles servent à occuper un rôle pendant qu'un autre finit ses tâches pour atteindre une tâche commune ensemble ou même pour obtenir un temps de jeu équivalent entre les rôles. Un joueur peut faire toutes les tâches annexes s'il est rapide comme n'en faire aucune, cela ne doit pas être bloquant pour le scénario.",
     "tutorial_optionnal_event": "Événement aléatoire",
