characters add physically present or reachable by phone

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -66,6 +66,9 @@
     "dialog_save_placeholder": "My Scenario",
     "dialog_createOptTask_title": "Creation of Alternative Task(s)",
     "dialog_createOptTask_label": "Quantity of Alternative Tasks to create in the column:",
+    "dialog_characterUsedInReward_title_part1": "The character",
+    "dialog_characterUsedInReward_title_part2": "is no longer reachable by phone",
+    "dialog_characterUsedInReward_content": "The character is no longer reachable by phone while being used in one or more rewards \"Character contact\".\nIt is recommended to keep a phone number and the checkbox checked or removing the related rewards.\n\nDo you want to remove all rewards related to this character?",
     "dialog_button_yes": "Yes",
     "dialog_button_no": "No",
     "dialog_button_save": "Download",
@@ -274,6 +277,8 @@
     "char_description_label": "Description",
     "char_phone_label": "Tel no:",
     "char_color_label": "Color",
+    "char_contact_physically_label" : "Physically present",
+    "char_contact_reachableByPhone_label": "Reachable by phone",
     "chars_title": "Non player characters",
     "char_tooltip": "To involve this character in a Task or Random Event, click on the respective tile and select this character from the sidebar.",
     "char_button_create": "Create",
