--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -65,7 +65,10 @@
     "dialog_save_content": "Nom du projet :",
     "dialog_save_placeholder": "Mon Scénario",
     "dialog_createOptTask_title": "Création de Tâche(s) Alternative(s)",
-    "dialog_createOptTask_label": "Quantié de Tâches Alternatives à créer dans la colonne :",
+    "dialog_createOptTask_label": "Quantité de Tâches Alternatives à créer dans la colonne :",
+    "dialog_characterUsedInReward_title_part1": "Le personnage",
+    "dialog_characterUsedInReward_title_part2": "n'est plus joignable par téléphone",
+    "dialog_characterUsedInReward_content": "Le personnage n'est plus joignable par téléphone alors qu'il est utilisé dans une ou plusieurs récompense \"Contact d'un personnage\".\nIl est conseillé de garder un numéro de téléphone et la case cochée ou de supprimer les récompenses liées.\n\nVoulez vous supprimer toutes les récompenses liées à ce personnage ?",
     "dialog_button_yes": "Oui",
     "dialog_button_no": "Non",
     "dialog_button_save": "Télécharger",
@@ -274,6 +277,8 @@
     "char_description_label": "Description",
     "char_phone_label": "N° tél :",
     "char_color_label": "Couleur",
+    "char_contact_physically_label" : "Présent physiquement",
+    "char_contact_reachableByPhone_label": "Joignable par téléphone",
     "chars_title": "Personnages non joueur",
     "char_tooltip": "Pour faire intervenir ce personnage sur une Tâche ou Événement aléatoire, cliquez sur la tuile en question et sélectionnez ce personnage dans la barre latérale.", 
     "char_button_create": "Créer",
