--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -13,7 +13,7 @@
     "plus_tooltip": "Ajouter une nouvelle tuilde de ce type.",
     "zoomIn_tooltip": "Zoomer.",
     "zoomOut_tooltip": "Dézoomer.",
-    "resetRoom_tooltip": "Réinitialiser le zoom à 100%",
+    "zoomReset_tooltip": "Réinitialiser le zoom à 100%",
     "settingsMenu_tooltip": "Ouvrir le menu des paramètres (sauvegarde, import, ...)",
     "enableHelp_label": "Activer les aides",
     "enableHelp_tooltip": "Descriptif de chaque élément du RLG Maker.",
