--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -504,6 +504,22 @@
     "discussion_reward_type_discussion_tooltip": "",
     "discussion_reward_type_declarativeSentence_tootlip": "",
     "discussion_reward_type_interrogativeSentence_tooltip": "",
-    "discussion_reward_type_response_tooltip": ""
+    "discussion_reward_type_response_tooltip": "",
+
+    "linkedFile_title": "Resources",
+    "linkedFile_type_image": "Image",
+    "linkedFile_type_video": "Video",
+    "linkedFile_type_audio": "Audio",
+    "linkedFile_type_other": "Other",
+    "linkedFile_import_title": "Import and attach a file",
+    "linkedFile_import_button": "Import a file",
+    "linkedFile_import_tooltip": "Allows importing a new file into the scenario and attaching it to the tile",
+    "linkedFile_attach_title": "Attach an already imported file",
+    "linkedFile_attach_select_placeholder": "Choose the file",
+    "linkedFile_attach_button": "Attach",
+    "linkedFile_attach_tooltip": "Allows attaching to the tile a file already used elsewhere in the scenario",
+    "linkedFile_files_titles": "Attached file(s)",
+    "linkedFile_files_consultButton_tooltip": "Open the file in a new tab",
+    "linkedFile_files_tooltip": "List of files attached to the tile"
 
 }
