linkedfiles: sider-piece files sort by category

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -509,10 +509,10 @@
     "discussion_reward_type_response_tooltip": "",
 
     "linkedFile_title": "Attachments",
-    "linkedFile_type_image": "Image",
-    "linkedFile_type_video": "Video",
-    "linkedFile_type_audio": "Audio",
-    "linkedFile_type_other": "Other",
+    "linkedFile_type_image": "Image(s)",
+    "linkedFile_type_video": "Video(s)",
+    "linkedFile_type_audio": "Audio(s)",
+    "linkedFile_type_other": "Other(s)",
     "linkedFile_import_title": "Import and attach a file",
     "linkedFile_import_button": "Import a file",
     "linkedFile_import_tooltip": "Allows importing a new file into the scenario and attaching it to the tile",
