--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -509,10 +509,10 @@
     "discussion_reward_type_response_tooltip": "",
 
     "linkedFile_title": "Pièces jointes",
-    "linkedFile_type_image": "Image",
-    "linkedFile_type_video": "Video",
-    "linkedFile_type_audio": "Audio",
-    "linkedFile_type_other": "Autre",
+    "linkedFile_type_image": "Image(s)",
+    "linkedFile_type_video": "Video(s)",
+    "linkedFile_type_audio": "Audio(s)",
+    "linkedFile_type_other": "Autre(s)",
     "linkedFile_import_title": "Importer et attacher un fichier",
     "linkedFile_import_button": "Importer un fichier",
     "linkedFile_import_tooltip": "Permet d'importer un nouveau fichier au scénario et de l'attacher à la tuile",
